# stepfun-multimodal

./: .gitignore  CHANGELOG.md  README.md  migrate.sh  pyproject.toml  requirements-dev.txt  stepfun.cmd  stepfun.sh
docs/incidents/: 2026-06-25-ci-missing-requests.md  2026-06-25-step-plan-voice-endpoints.md
skill/: SKILL.md
skill/audio/: SKILL.md
stepfun_audio/: cli.py  realtime.py  tts_stream.py  voices.py
stepfun_image/: __init__.py  ccswitch.py  cli.py  client.py
tests/: conftest.py  test_voices.py  test_ws_streams.py
